<resources>

    <string name="app_name">Northampton</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_main">Northampton</string>
    <string name="tab_social">Social</string>
    <string name="tab_report">Report</string>
    <string name="tab_find">Find</string>
    <string name="tab_services">Services</string>
    <string name="tab_contact">Contact</string>
    <string name="select_button_text">Select</string>
    <string name="next_button_text">Next</string>
    <string name="google_maps_api_key">AIzaSyAUfYTvumQhrRfnYRzSyaKF5KOFSeMfL9g</string>
    <string name="social_feed_url">http://selfserve.northampton.gov.uk/mynbc/socialFeed.xml</string>
    <string name="social_base_url">http://twitter.com</string>
    <string name="data_source">myNBC</string>
    <string name="report_main_title">Report It</string>
    <string name="report_type_title">Report a problem</string>
    <string name="report_type_title_desc">type</string>
    <string name="report_description">Description</string>
    <string name="report_photo_dialog_title">Add a photo of the problem</string>
    <string-array name="report_photo_dialog_options">
        <item>Use the Camera</item>
        <item>Pick from Gallery</item>
    </string-array>
    <string name="report_url">CreateCall</string>
    <string name="bin_collections_url">BinRoundFinder?mobileApp=true&amp;postcode=</string>
    <!--<string name="mycouncil_url">http://172.17.61.189:8080/mycouncil/</string>-->
    <string name="mycouncil_url">https://selfserve.northampton.gov.uk/mycouncil-test/</string>
    <string name="report_type_step">Type</string>
    <string name="report_details_title">Details</string>
    <string name="report_details_title_desc">details</string>
    <string name="report_image_addPhoto_description">Add a photo</string>
    <string name="report_image_description">Supporting Photo</string>
    <string name="report_location_step">Location</string>
    <string name="report_location_address_near">near</string>
    <string name="report_details_step">Details</string>
    <string name="report_confirmation_step">Done</string>
    <string name="report_notifications_title">Receipt</string>
    <string name="report_notifications_sms_checkbox_label">SMS</string>
    <string name="report_notifications_email_checkbox_label">Email</string>
    <string name="report_submit_button_text">Report It</string>
    <string name="report_submit_button_text_again">Try again</string>
	<string name="report_submit_error">Your details didn\'t send, try again when you have a connection</string>
	
    <string name="photo_album_name">Northampton</string>
    <string name="contact_subject_title">SERVICE</string>
    <string name="contact_reason_title">DEPARTMENT</string>
    <string name="contact_type_title">REASON</string>
    <string name="contact_details_title">MESSAGE</string>
    <string name="contact_confirmation_title">Done</string>
    <string name="contact_subject_step">Service</string>
    <string name="contact_reason_step">Dept</string>
    <string name="contact_type_step">Reason</string>
    <string name="contact_details_step">Details</string>
    <string name="contact_confirmation_step">Done</string>
    <string name="contact_type">Contact Us</string>
    <string name="contact_message_title">Contact us about</string>
    <string name="contact_name">Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_phone">Telephone</string>
    <string name="contact_description">Your message</string>
    <string name="contact_send_button">Send It</string>
    <string name="contact_send_button_again">Try again</string>
    <string name="contact_send_error">Your message didn\'t send, try again when you have a connection</string>
    <string name="contact_error_message">Enter a message</string>
    <string name="contact_error_name">Enter your name</string>
    <string name="contact_error_email">Check your email address</string>
    <string name="contact_error_phone">Check your phone number</string>
    <string name="contact_url">CreateContact</string>
    <string name="findit_main_title">Find It</string>
    <string name="services_main_title">Services</string>
    <string name="postcode_dialog_title">Enter your Post Code</string>
    <string-array name="postcode_digits">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="postcode_letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="conf_details_title">Thank You</string>
    <string name="conf_details_desc_contact_top">Your reference number is</string>
    <string name="conf_details_desc_report_top">Your reference number is</string>
    <string name="conf_details_desc_contact_bottom">We aim to respond to your enquiry by</string>
    <string name="conf_details_desc_report_bottom">We aim to resolve this problem by</string>
    <string name="conf_step1">Service</string>
    <string name="conf_step2">Dept</string>
    <string name="conf_step3">Reason</string>
    <string name="conf_step4">Details</string>
    <string name="conf_step5">Done</string>
	<string name="settings_title">Settings</string>
	<string name="settings_yourDetails_title">YOUR DETAILS</string>
	<string name="settings_name">Name</string>
	<string name="settings_email">Email</string>
	<string name="settings_telephone">Phone</string>
	<string name="settings_postcode">Post Code</string>
	<string name="settings_name_add">add your name</string>
	<string name="settings_email_add">add your email address</string>
	<string name="settings_telephone_add">add your telephone number</string>
	<string name="settings_postcode_add">add your post code</string>
	<string name="settings_name_update">update your name</string>
	<string name="settings_email_update">update your email address</string>
	<string name="settings_telephone_update">update your telephone number</string>
	<string name="settings_postcode_update">update your post code</string>
	<string name="bin_collection_black">black</string>
	<string name="bin_collection_black_out">Black Wheelie Bin</string>
	<string name="bin_collection_brown">brown</string>
	<string name="bin_collection_brown_out">Brown Wheelie Bin</string>
	<string name="bin_collection_bags">bags</string>
	<string name="bin_collection_bags_out">Black Bags</string>
	<string name="findit_type_title">Find</string>
	<string name="findit_type_title_desc">OPTION</string>
	<string name="findit_postcode_title">Post Code</string>
	<string name="findit_postcode_desc">confirm your post code</string>
	<string name="findit_bin_collection_day">Bin Collection Day</string>
	<string name="findit_bin_collection_address_text">ADDRESS</string>
	<string name="findit_bin_collection_find_text">Find my collection day</string>
	<string name="findit_bin_collection_day_text">Your collection day is</string>
	<string name="findit_bin_collection_bin_text">Your next collection will be</string>
	<string name="findit_bin_collection_time_text">Remember to put out your bins by</string>
	<string name="findit_bin_collection_recycling_text">We will collect all of your recycling every week.</string>
	<string name="findit_bin_collection_wheelie_text">Your collections alternate between Black and Brown wheelie bins.</string>
	<string name="findit_bin_collection_reminder_button_text">Set a Reminder</string>
	<string name="findit_bin_collection_reminder_set">Reminder Set</string>
	<string-array name="findit_type_array">
	    <item>@string/findit_bin_collection_day</item>
	</string-array>
	<string name="report_confirmation_done_Button">Done</string>
	<string name="contact_confirmation_done_Button">Done</string>
	<string name="button_text_Done">Done</string>
	<string name="button_text_Next">Next</string>
	<string name="event_title_blackbin">Black Bin Collection</string>
	<string name="event_title_brownbin">Brown Bin Collection</string>
	<string name="event_title_bags">Refuse and Recycling Collection</string>
	<string name="event_rrule_fortnightly">FREQ=WEEKLY;INTERVAL=2;COUNT=26;WKST=MO</string>
	<string name="event_rrule_weekly">FREQ=WEEKLY;COUNT=52;WKST=MO</string>
	<string name="account_filter">com.google</string>
	<string name="ga_event_ui">ui_event</string>
	<string name="ga_event_transaction">transaction_event</string>
	<string name="ga_event_category_social">Social</string>
	<string name="ga_event_category_report">Report It</string>
	<string name="ga_event_category_find">Find It</string>
	<string name="ga_event_category_contact">Contact</string>
	<string name="ga_event_report_step1">Step 1 Completed: Type Selected</string>
	<string name="ga_event_report_step2">Step 2 Completed: Location</string>
	<string name="ga_event_report_step3">Step 3 Completed: Submitted</string>
	<string name="ga_event_report_step3b">Step 3 Failed: Submitting Failed</string>
	<string name="ga_event_report_step4">Step 4 Completed: Done</string>
	<string name="ga_event_report_photo_added">Photo Added</string>
	<string name="ga_event_contact_step1">Step 1 Completed: Subject</string>
	<string name="ga_event_contact_step2">Step 2 Completed: Reason</string>
	<string name="ga_event_contact_step3">Step 3 Completed: Type</string>
	<string name="ga_event_contact_step4">Step 4 Completed: Sending Message</string>
	<string name="ga_event_contact_step5">Step 5 Complete: Message Sent</string>
	<string name="ga_event_contact_step5b">Step 5 Failed: Message Failed</string>
	<string name="ga_event_contact_step6">Step 6 Complete: Done</string>
	<string name="ga_event_find_step1">Step 1 Completed: Type</string>
	<string name="ga_event_find_step2">Step 2 Completed: Postcode</string>
	<string name="ga_event_find_step2b">Step 2b Completed: Address Selected</string>
	<string name="ga_event_find_step3">Step 3 Completed: Found It</string>
	<string name="ga_event_find_reminder_set">Reminder Set</string>
</resources>