<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_main_LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:id="@+id/settings_name_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/settings_name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_name"/>
        <TextView 
            android:id="@+id/settings_name_set_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_name_add"/>
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/settings_email_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/settings_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_email"/>
        <TextView 
            android:id="@+id/settings_email_set_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_email_add"/>
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/settings_telephone_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/settings_telephone_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_telephone"/>
        <TextView 
            android:id="@+id/settings_telephone_set_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_telephone_add"/>
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/settings_postCode_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/settings_postCode_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_postcode"/>
        <TextView 
            android:id="@+id/settings_postCode_set_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_postcode_add"/>
    </LinearLayout>
    <Button 
        android:id="@+id/settings_save_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Save"/>
    <Button 
        android:id="@+id/settings_cancel_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"/>
    
</LinearLayout>