<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/actionBarText"
    android:orientation="vertical"
    android:padding="@dimen/baseline"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/contact_progress_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseline"
        android:background="@color/actionBarText"
        android:minHeight="@dimen/baseline_eight"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/contact_step_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:contentDescription="@string/conf_step1"
            android:src="@drawable/progress_line_current" />

        <ImageView
            android:id="@+id/contact_step_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:contentDescription="@string/conf_step2"
            android:src="@drawable/progress_line" />

        <ImageView
            android:id="@+id/contact_step_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:contentDescription="@string/conf_step3"
            android:src="@drawable/progress_line" />

        <ImageView
            android:id="@+id/contact_step_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:contentDescription="@string/conf_step4"
            android:src="@drawable/progress_line" />

        <ImageView
            android:id="@+id/contact_step_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/conf_step5"
            android:src="@drawable/progress_line" />

    </LinearLayout>

    <TextView
        android:id="@+id/contact_reasons_title_TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_progress_LinearLayout"
        android:layout_marginBottom="@dimen/baseline"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/baseline_padding"
        android:text="@string/contact_type"
        android:textColor="@color/nbc_red_border"
        android:textSize="@dimen/text_size_main_title" />

    <TextView
        android:id="@+id/contact_reasons_title_desc_TextView"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_reasons_title_TextView"
        android:layout_marginBottom="@dimen/baseline"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/baseline_eight"
        android:text="@string/contact_subject_title"
        android:textSize="@dimen/text_size_main_subtext" />

    <Spinner
        android:id="@+id/contact_reasons1_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_reasons_title_desc_TextView"
        android:layout_marginBottom="@dimen/baseline_half"
        android:minHeight="44dip"
        android:prompt="@string/contact_subject_step" />

    <Button
        android:id="@+id/contact_reasons1_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nbc_button"
        android:minHeight="48dp"
        android:text="@string/next_button_text"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold" />

</RelativeLayout>