<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/report_confirmation_RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/actionBarText"
    android:orientation="vertical"
    android:padding="@dimen/baseline"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/report_progress_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/baseline"
        android:background="@color/actionBarText"
        android:minHeight="@dimen/baseline_eight"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/report_step_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:src="@drawable/progress_line_done"
            android:contentDescription="@string/report_type_step" />

        <ImageView
            android:id="@+id/report_step_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:src="@drawable/progress_line_done"
            android:contentDescription="@string/report_location_step" />

        <ImageView
            android:id="@+id/report_step_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/baseline"
            android:layout_weight="1"
            android:src="@drawable/progress_line_done"
            android:contentDescription="@string/report_details_step" />

        <ImageView
            android:id="@+id/report_step_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/progress_line_current"
            android:contentDescription="@string/report_confirmation_step" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/report_confirmation_details_RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_progress_LinearLayout"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/conf_details_title_TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/baseline_eight"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/baseline_eight"
            android:text="@string/conf_details_title"
            android:textColor="@color/nbc_red_border"
            android:textSize="@dimen/text_size_main_title" />

        <TextView
            android:id="@+id/conf_description_TextView"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conf_details_title_TextView"
            android:layout_marginBottom="@dimen/baseline"
            android:gravity="center_vertical"
            android:text="@string/conf_details_desc_report_top"
            android:textSize="@dimen/text_size_main_subtext" />

        <TextView
            android:id="@+id/conf_case_ref_TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conf_description_TextView"
            android:layout_marginBottom="@dimen/baseline_three_quarts"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:minHeight="@dimen/baseline_full"
            android:paddingBottom="@dimen/baseline_padding"
            android:paddingRight="@dimen/baseline_padding"
            android:paddingTop="@dimen/baseline_padding"
            android:text="@string/conf_details_title"
            android:textColor="@color/nbc_red"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_main_title" />

        <TextView
            android:id="@+id/conf_description_bottom_TextView"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conf_case_ref_TextView"
            android:layout_marginBottom="@dimen/baseline"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/baseline_padding"
            android:text="@string/conf_details_desc_report_bottom"
            android:textSize="@dimen/text_size_main_subtext" />

        <TextView
            android:id="@+id/conf_due_date_TextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conf_description_bottom_TextView"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:minHeight="@dimen/baseline_full"
            android:paddingBottom="@dimen/baseline_padding"
            android:paddingRight="@dimen/baseline_padding"
            android:paddingTop="@dimen/baseline_padding"
            android:text="@string/conf_details_title"
            android:textColor="@color/nbc_red"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_main_title" />

    </RelativeLayout>

    <Button
        android:id="@+id/reportDoneButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nbc_button"
        android:padding="10dip"
        android:text="@string/report_confirmation_done_Button"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold" />

</RelativeLayout>